Fields of study for question pages is now working, also fixed a small bug as a result of changing a function. Also added a line of css to improve readability while testing

--- a/youask/styles/styles.css
+++ b/youask/styles/styles.css
@@ -1,4 +1,9 @@
-a:link { text-decoration: none;color: white}
+
+.error{
+    color='red'
+}
+
+/*a:link { text-decoration: none;color: white}
 a:active { text-decoration:blink}
 a:hover { text-decoration:underline;color: green}
 a:visited { text-decoration: underline;color: white}
@@ -126,3 +131,4 @@ main{
 
 }
 
+*/
